# showcase-statement-classification

./: .gitattributes  13_class_statement_classification_bilstm.pb  20_class_statement_classification_bilstm.pb  Cargo.toml  README.md
.github/: dependabot.yml
public/css/: main.css
public/js/editor/: editor.js  examples.js
src/: main.rs
templates/: layout.html.tera  overview.html.tera
