[package]
name = "web-scipara-demo"
version = "0.1.0"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
edition = "2018"

[dependencies.rocket_contrib]
default-features = false
version = "0.4.0"
features = ["json", "tera_templates"]

[dependencies.llamapun]
git = "https://github.com/KWARC/llamapun"

[dependencies]
rocket = "0.4.0"
rocket_codegen = "0.4.0"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
hyper = "0.12.0"
hyper-tls = "0.3.1"
tokio-core = "0.1.0"
url  = "1.7.1"
libxml = "0.2.5"
lazy_static = "1.2.0"
regex = "1.0.0"
tensorflow = { version = "0.13.0", features = ["tensorflow_gpu"] }