[package]
name = "showcase-statement-classification"
version = "0.3.0"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
edition = "2018"

[dependencies.rocket_contrib]
default-features = false
version = "0.4.0"
features = ["json", "tera_templates"]

[dependencies.llamapun]
git = "https://github.com/KWARC/llamapun"

[dependencies]
rocket = "0.4.2"
rocket_codegen = "0.4.2"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
reqwest = "0.10.0"
libxml = "0.2.12"
lazy_static = "1.2.0"
regex = "1.0.0"
tensorflow = { version = "0.18.0"} # features = ["tensorflow_gpu"] }
